# Perfect_Prompts

./: .gitmodules  Formal-Logic-Set-Theory-and-Discrete-Mathematics.md  README.md
AGENTS_library/: No-Assumptions_AGENTS.md
Methodologies/Guided_Autonomy_Prompting/: Emergence_Based_Design_AGENTS.md  GAP_Domain_Agnostic.md  GAP_Physics.md
PERSONAS/: Memory-Graph-Architect.txt
PERSONAS/copilot_agent_formatting/: VDM-analytical-reviewer.agent.md  VDM-hybrid-physicist.agent.md  data-analytics.agent.md  meta-systems-reasoner.agent.md
PERSONAS/generic_formatting/: Unbiased_Context_Auditor.md
STANDARDS_REPOSITORY/: EVENT_DRIVEN_ARCHITECTURE_STANDARDS.md  MICROSERVICES_ARCHITECTURE_STANDARDS.md  README.md  SERVERLESS_ARCHITECTURE_STANDARDS.md
STANDARDS_REPOSITORY/apex/: APEX_STANDARDS.md  STANDARDS.md  STANDARDS_PRIORITY_INDEX.md
example_prompts/: SSRS_Designer.md
general_guidelines/: Rigorous-Truth-Seeking.md
go/: README.md
go/agent_prompts/: agentDesigner.go  (+12 more)
python/: README.md
rules/: A-Compendium-of-Technical-&-Scientific-Principles.md  Formal-Logic-Set-Theory-and-Discrete-Mathematics.md  How_to_Prove_It.md  Information-theory-inference-and-learning-algorithms.md  Intro_to_general_systems_thinking.md  Master-Rules-for-Rational-Inference-and-Bayesian-System-Design  Objective Decision-Making and Truth-Seeking.md  Objective-Decision-Making-and-Truth-Seeking.md  Probabilistic-Modeling-Information-Theory-and-Machine-Learning.md  Probability-Theory-The-Logic-of-Science.md  README.md  Rigorous-Technical-and-Logical-Discourse.md  Rules-for-Rigorous-Mathematical-Inquiry-and-Presentation.md  The-Uses-of-Argument.md
rust/: README.md
rust/examples/: Cargo.toml  axum_service.rs  basic_usage.rs
skills/: readme-generator.skill
typescript/: README.md
(+415 files in other folders)
